source/blender/editors/space_view3d/view3d_placement.c
@@ -728,14 +728,11 @@ static void view3d_interactive_add_begin(bContext *C, wmOperator *op, const wmEv
       /* Set this flag so snapping always updated. */
       int mval[2];
       WM_event_drag_start_mval(event, ipd->region, mval);
-      int flag_orig = snap_state_new->flag;
-      snap_state_new->flag |= V3D_SNAPCURSOR_TOGGLE_ALWAYS_TRUE;
 
       /* Be sure to also compute the #V3DSnapCursorData.plane_omat. */
       snap_state->draw_plane = true;
 
       ED_view3d_cursor_snap_data_update(snap_state_new, C, mval[0], mval[1]);
-      snap_state_new->flag = flag_orig;
     }
   }
 
